# routes/support.js
@@ -9,5 +9,8 @@ router.get('/', supportController.getsupportAPI);
 router.get('/add', supportController.addList);
 router.get('/post', supportController.getPostAPI);
 router.get('/search', supportController.searchPost);
+router.get('/zzim', supportController.getZzimAPI);
+router.get('/zzim/add', supportController.addZzimAPI);
+router.get('/zzim/delete', supportController.removeZzimAPI);
 
 module.exports = router;
